<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultsNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/rushingshine"
            android:textColor="@color/black"
            android:textSize="75sp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="50dp"
            android:text="@string/resultsNote" />

        <TextView
            android:id="@+id/resultsNote2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultsNote2"
            android:fontFamily="@font/rushingshine"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textAlignment="center"
            />

        <ImageView
            android:id="@+id/genrePicture"
            android:layout_width="269dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:contentDescription="@string/placeholderDescription"
            app:srcCompat="@drawable/placeholder" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:fontFamily="@font/rushingshine"
            android:textSize="45sp"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="25dp"
            android:visibility="invisible"
            android:text="PLACEHOLDER" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/homeButton"
            android:layout_gravity="center"
            android:fontFamily="@font/letsgetcrazy"
            android:textSize="20sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:backgroundTint="@color/buttonColor"
            />

        <TextView
            android:id="@+id/homeButtonMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/letsgetcrazy"
            android:text="@string/homeMessage"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>